Removed image from carousel on all page along with some html fixes. Removed content on the Specials page and added some text explaining that no specialls are offered.

--- a/web/index.html
+++ b/web/index.html
@@ -39,7 +39,6 @@
                         <div><img src="images/garden.jpg" /></div>
                         <div><img src="images/vacuum.jpg" /></div>
                         <div><img src="images/dispenser.jpg" /></div>
-                        <div><img src="images/pricesign.jpg" /></div>
                         <div><img src="images/disclaimersign.jpg" /></div>
                         <div><img src="images/entrance.jpg" /></div>
                         <div><img src="images/entrance2.jpg" /></div>
@@ -47,26 +46,25 @@
                 </div>
             </div>
         </div>
-    <div class="content left">
-        <h1>Lakeside Auto Spa</h1>
-        <div class="left dividleft">
-            <p>42400 Hayes Rd Clinton Twp, MI 48038</p>
-            <p>(586) 263-0088</p>
-            <p class="underline bold">Hours of Operation:</p>
-            <ul class="hours">
-                <li><span class="bold">Monday</span> - 8am to 7pm</li>
-                <li><span class="bold">Tuesday</span> - 8am to 7pm</li>
-                <li><span class="bold">Wedsnday</span> - 8am to 7pm</li>
-                <li><span class="bold">Thursday</span> - 8am to 7pm</li>
-                <li><span class="bold">Friday</span> - 8am to 7pm</li>
-                <li><span class="bold">Saturday</span> - 8am to 7pm</li>
-                <li><span class="bold">Sunday</span> - 8am to 5pm</li>
-                <li class="smalltext">When weather is permitting.</li>
-            </ul>
+        <div class="content left">
+            <h1>Lakeside Auto Spa</h1>
+            <div class="left dividleft">
+                <p>42400 Hayes Rd Clinton Twp, MI 48038</p>
+                <p>(586) 263-0088</p>
+                <p class="underline bold">Hours of Operation:</p>
+                <ul class="hours">
+                    <li><span class="bold">Monday</span> - 8am to 7pm</li>
+                    <li><span class="bold">Tuesday</span> - 8am to 7pm</li>
+                    <li><span class="bold">Wedsnday</span> - 8am to 7pm</li>
+                    <li><span class="bold">Thursday</span> - 8am to 7pm</li>
+                    <li><span class="bold">Friday</span> - 8am to 7pm</li>
+                    <li><span class="bold">Saturday</span> - 8am to 7pm</li>
+                    <li><span class="bold">Sunday</span> - 8am to 5pm</li>
+                    <li class="smalltext">When weather is permitting.</li>
+                </ul>
+            </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2936.5433620244658!2d-82.971363!3d42.607431!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8824def52dd01285%3A0xbf5243bd6a126f68!2sLakeside+Auto+Spa!5e0!3m2!1sen!2sus!4v1417642409048" width="350" height="350" frameborder="0" style="border: 1px solid #BBBBBB"></iframe>
         </div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2936.5433620244658!2d-82.971363!3d42.607431!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8824def52dd01285%3A0xbf5243bd6a126f68!2sLakeside+Auto+Spa!5e0!3m2!1sen!2sus!4v1417642409048" width="350" height="350" frameborder="0" style="border: 1px solid #BBBBBB"></iframe> 
-
-        
     </div>
 </div>
 </body>
