--- a/web/specials/index.html
+++ b/web/specials/index.html
@@ -38,35 +38,34 @@
 <div class="header">Lakeside Auto Spa</div>
 <div class="contentwrapper">
     <div class="cw_top">
-        <div class="navbar left">
-            <a href="http://lakesideautospa.com"><div>Home</div></a>
-            <a href="http://lakesideautospa.com/specials/"><div>Specials</div></a>
-            <a href="http://lakesideautospa.com/history/"><div>History</div></a>
-            <a href="http://lakesideautospa.com/funfacts/"><div>Fun Facts</div></a>
-        </div>
-        <div class="imgsection left">
-            <div id="slider1_container" style="position: relative; top: 0px; left: 0px; width: 700px; height: 400px;">
-                <!-- Slides Container -->
-                <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 700px; height: 400px; overflow: hidden;">
-                        <div><img src="../images/frontsign.jpg" /></div>
-                        <div><img src="../images/front.jpg" /></div>
-                        <div><img src="../images/front_right.jpg" /></div>
-                        <div><img src="../images/front_side2.jpg" /></div>
-                        <div><img src="../images/garden.jpg" /></div>
-                        <div><img src="../images/vacuum.jpg" /></div>
-                        <div><img src="../images/dispenser.jpg" /></div>
-                        <div><img src="../images/pricesign.jpg" /></div>
-                        <div><img src="../images/disclaimersign.jpg" /></div>
-                        <div><img src="../images/entrance.jpg" /></div>
-                        <div><img src="../images/entrance2.jpg" /></div>
-                        <div><img src="../images/ultimate.jpg" /></div>
+            <div class="navbar left">
+                <a href="http://lakesideautospa.com"><div>Home</div></a>
+                <a href="http://lakesideautospa.com/specials/"><div>Specials</div></a>
+                <a href="http://lakesideautospa.com/history/"><div>History</div></a>
+                <a href="http://lakesideautospa.com/funfacts/"><div>Fun Facts</div></a>
+            </div>
+            <div class="imgsection left">
+                <div id="slider1_container" style="position: relative; top: 0px; left: 0px; width: 700px; height: 400px;">
+                    <!-- Slides Container -->
+                    <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 700px; height: 400px; overflow: hidden;">
+                            <div><img src="../images/frontsign.jpg" /></div>
+                            <div><img src="../images/front.jpg" /></div>
+                            <div><img src="../images/front_right.jpg" /></div>
+                            <div><img src="../images/front_side2.jpg" /></div>
+                            <div><img src="../images/garden.jpg" /></div>
+                            <div><img src="../images/vacuum.jpg" /></div>
+                            <div><img src="../images/dispenser.jpg" /></div>
+                            <div><img src="../images/disclaimersign.jpg" /></div>
+                            <div><img src="../images/entrance.jpg" /></div>
+                            <div><img src="../images/entrance2.jpg" /></div>
+                            <div><img src="../images/ultimate.jpg" /></div>
+                    </div>
                 </div>
             </div>
+        <div class="content left">
+            <h1>Specials</h1>
+            <div>Unfortunately there are no Specials offered at this time. Please check again at a later time.</div>
         </div>
-    <div class="content left">
-        <h1>Specials</h1>
-        <div id="printme" class="underline bold">Click Here to Print Special</div>
-        <div id="printarea"><img src="../images/special.jpg"/></div>
     </div>
 </div>
 </body>
