Made navbar fixed but static when the hamburger icon is present and allowed the collapse to work properly if the hamburger icon is visible as well.

--- a/web/index.html
+++ b/web/index.html
@@ -10,16 +10,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/site.js"></script>
 </head>
-<body>
-    <!--<button id="homeBtn">Home</button>
-    <button id="specialsBTn">Specials</button>
-    <button id="historyBtn">History</button>
-    <button id="funFactsBtn">Fun Facts</button>-->
-    
-    <nav class="navbar navbar-default">
+<body>    
+    <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <button id="hamburger" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
