--- a/web/index.html
+++ b/web/index.html
@@ -10,32 +10,43 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/site.js"></script>
 </head>
-<body>    
+<body>
     <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button id="hamburger" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand">Lakeside Auto Spa</a>
-                </div>
-                <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav pointer">
-                        <li class="active"><a id="homeBtn">Home</a></li>
-                        <li><a id="specialsBTn">Specials</a></li>
-                        <li><a id="historyBtn">History</a></li>
-                        <li><a id="funFactsBtn">Fun Facts</a></li>
-                    </ul>
-                </div>
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button id="hamburger" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand">Lakeside Auto Spa</a>
             </div>
-        </nav>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav pointer">
+                    <li class="active"><a id="homeBtn">Home</a></li>
+                    <li><a id="specialsBTn">Specials</a></li>
+                    <li><a id="historyBtn">History</a></li>
+                    <li><a id="funFactsBtn">Fun Facts</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div id="content">
         <script type="text/javascript">
             $('#content').load('content/home.html');
         </script>
     </div>
+    <p id="text"></p>
+
+    <script type="text/javascript">
+        var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+        var element = document.getElementById('text');
+        if (isMobile) {
+            element.innerHTML = "You are using Mobile";
+        } else {
+            element.innerHTML = "You are using Desktop";
+        }
+    </script>
 </body>
 </html>
