New special added and text adjustments for Fun Facts

--- a/web/funfacts/index.html
+++ b/web/funfacts/index.html
@@ -50,12 +50,12 @@
             <h1>Interesting Facts About Us</h1>
             <ul>
                 <li>We have been in business for (30+) years. Opened in February, 1982.</li>
-                <li>We use 100% clean water</li>
+                <li>We use 100% clean water for prep and rinse</li>
                 <li>All of our soaps, foam polishers, clear coat sealers, wheel cleaners and tire dressings are made in Michigan by Stone Soap of Sylvan Lake</li>
                 <li>Our equipment is made in Michigan by PECO Carwash Equipment based in Auburn Hills</li>
                 <li>Our vacuums are FREE with a carwash</li>
                 <li>We care about the environment. We use energy efficient on-demand hot water to prep and rinse your vehicle</li>
-                <li>Our employees are the best there are and were all made in Michigan</li>
+                <li>Our employees are the best there are and all are native "Michiganders"</li>
                 <li>Pre-Paid Carwash Passes really provide value AND are great gifts</li>
             </ul>
         </div>
