--- a/web/specials/index.html
+++ b/web/specials/index.html
@@ -62,10 +62,13 @@
                     </div>
                 </div>
             </div>
-        <div class="content left">
-            <h1>Specials</h1>
-            <div>Unfortunately there are no Specials offered at this time. Please check again at a later time.</div>
-        </div>
+            <div class="content left">
+                <h1>Specials</h1>
+                <div id="printme" class="underline bold">Click Here to Print Special</div>
+                <div id="printarea">
+                    <img src="../images/LAS 2 Off Internet Coupon.png" />
+                </div>
+            </div>
     </div>
 </div>
 </body>
