Update to have content match master

--- a/web/index.html
+++ b/web/index.html
@@ -37,7 +37,7 @@
             $('#content').load('content/home.html');
         </script>
     </div>
-    <p id="text"></p>
+    <h1 id="text"></h1>
 
     <script type="text/javascript">
         var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
