--- a/web/legacy/funfacts/index.html
+++ b/web/legacy/funfacts/index.html
@@ -19,19 +19,19 @@
     </script>
 </head>
 <body>
-<div class="header">Lakeside Auto Spa</div>
-<div class="contentwrapper">
-    <div class="cw_top">
-        <div class="navbar left">
-            <a href="http://lakesideautospa.com"><div>Home</div></a>
-            <a href="http://lakesideautospa.com/specials/"><div>Specials</div></a>
-            <a href="http://lakesideautospa.com/history/"><div>History</div></a>
-            <a href="http://lakesideautospa.com/funfacts/"><div>Fun Facts</div></a>
-        </div>
-        <div class="imgsection left">
-            <div id="slider1_container" style="position: relative; top: 0px; left: 0px; width: 700px; height: 400px;">
-                <!-- Slides Container -->
-                <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 700px; height: 400px; overflow: hidden;">
+    <div class="header">Lakeside Auto Spa</div>
+    <div class="contentwrapper">
+        <div class="cw_top">
+            <div class="navbar left">
+                <a href="http://lakesideautospa.com"><div>Home</div></a>
+                <a href="http://lakesideautospa.com/specials/"><div>Specials</div></a>
+                <a href="http://lakesideautospa.com/history/"><div>History</div></a>
+                <a href="http://lakesideautospa.com/funfacts/"><div>Fun Facts</div></a>
+            </div>
+            <div class="imgsection left">
+                <div id="slider1_container" style="position: relative; top: 0px; left: 0px; width: 700px; height: 400px;">
+                    <!-- Slides Container -->
+                    <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 700px; height: 400px; overflow: hidden;">
                         <div><img src="../images/frontsign.jpg" /></div>
                         <div><img src="../images/front.jpg" /></div>
                         <div><img src="../images/front_right.jpg" /></div>
@@ -43,23 +43,23 @@
                         <div><img src="../images/entrance.jpg" /></div>
                         <div><img src="../images/entrance2.jpg" /></div>
                         <div><img src="../images/ultimate.jpg" /></div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="content left">
-            <h1>Interesting Facts About Us</h1>
-            <ul>
-                <li>We have been in business for (30+) years. Opened in February, 1982.</li>
-                <li>We use 100% clean water</li>
-                <li>All of our soaps, foam polishers, clear coat sealers, wheel cleaners and tire dressings are made in Michigan by Stone Soap of Sylvan Lake</li>
-                <li>Our equipment is made in Michigan by PECO Carwash Equipment based in Auburn Hills</li>
-                <li>Our vacuums are FREE with a carwash</li>
-                <li>We care about the environment. We use energy efficient on-demand hot water to prep and rinse your vehicle</li>
-                <li>Our employees are the best there are and were all made in Michigan</li>
-                <li>Pre-Paid Carwash Passes really provide value AND are great gifts</li>
-            </ul>
+            <div class="content left">
+                <h1>Interesting Facts About Us</h1>
+                <ul>
+                    <li>We have been in business for (30+) years. Opened in February, 1982.</li>
+                    <li>We use 100% clean water for prep and rinse</li>
+                    <li>All of our soaps, foam polishers, clear coat sealers, wheel cleaners and tire dressings are made in Michigan by Stone Soap of Sylvan Lake</li>
+                    <li>Our equipment is made in Michigan by PECO Carwash Equipment based in Auburn Hills</li>
+                    <li>Our vacuums are FREE with a carwash</li>
+                    <li>We care about the environment. We use energy efficient on-demand hot water to prep and rinse your vehicle</li>
+                    <li>Our employees are the best there are and all are native "Michiganders"</li>
+                    <li>Pre-Paid Carwash Passes really provide value AND are great gifts</li>
+                </ul>
+            </div>
         </div>
     </div>
-</div>
 </body>
 </html>
