--- a/web/legacy/specials/index.html
+++ b/web/legacy/specials/index.html
@@ -19,7 +19,7 @@
     </script>
 
     <script type="text/javascript">
-    //print script
+        //print script
         $(document).ready(function () {
             $("#printme").click(function () {
                 var newWindow = window.open("", "Specials Print", "", "");
@@ -30,14 +30,14 @@
                 newWindow.print();
                 newWindow.close();
             });
-        }); 
+        });
     </script>
 
 </head>
 <body>
-<div class="header">Lakeside Auto Spa</div>
-<div class="contentwrapper">
-    <div class="cw_top">
+    <div class="header">Lakeside Auto Spa</div>
+    <div class="contentwrapper">
+        <div class="cw_top">
             <div class="navbar left">
                 <a href="http://lakesideautospa.com"><div>Home</div></a>
                 <a href="http://lakesideautospa.com/specials/"><div>Specials</div></a>
@@ -48,25 +48,28 @@
                 <div id="slider1_container" style="position: relative; top: 0px; left: 0px; width: 700px; height: 400px;">
                     <!-- Slides Container -->
                     <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 700px; height: 400px; overflow: hidden;">
-                            <div><img src="../images/frontsign.jpg" /></div>
-                            <div><img src="../images/front.jpg" /></div>
-                            <div><img src="../images/front_right.jpg" /></div>
-                            <div><img src="../images/front_side2.jpg" /></div>
-                            <div><img src="../images/garden.jpg" /></div>
-                            <div><img src="../images/vacuum.jpg" /></div>
-                            <div><img src="../images/dispenser.jpg" /></div>
-                            <div><img src="../images/disclaimersign.jpg" /></div>
-                            <div><img src="../images/entrance.jpg" /></div>
-                            <div><img src="../images/entrance2.jpg" /></div>
-                            <div><img src="../images/ultimate.jpg" /></div>
+                        <div><img src="../images/frontsign.jpg" /></div>
+                        <div><img src="../images/front.jpg" /></div>
+                        <div><img src="../images/front_right.jpg" /></div>
+                        <div><img src="../images/front_side2.jpg" /></div>
+                        <div><img src="../images/garden.jpg" /></div>
+                        <div><img src="../images/vacuum.jpg" /></div>
+                        <div><img src="../images/dispenser.jpg" /></div>
+                        <div><img src="../images/disclaimersign.jpg" /></div>
+                        <div><img src="../images/entrance.jpg" /></div>
+                        <div><img src="../images/entrance2.jpg" /></div>
+                        <div><img src="../images/ultimate.jpg" /></div>
                     </div>
                 </div>
             </div>
-        <div class="content left">
-            <h1>Specials</h1>
-            <div>Unfortunately there are no Specials offered at this time. Please check again at a later time.</div>
+            <div class="content left">
+                <h1>Specials</h1>
+                <div id="printme" class="underline bold">Click Here to Print Special</div>
+                <div id="printarea">
+                    <img src="../images/LAS 2 Off Internet Coupon.png" />
+                </div>
+            </div>
         </div>
     </div>
-</div>
 </body>
 </html>
