Added meta tag to support mobile devices with bootstrap properly. Updated, javascript to handle content a little bit better.

--- a/web/content/home.html
+++ b/web/content/home.html
@@ -16,6 +16,6 @@
             <li class="smalltext">When weather is permitting.</li>
         </ul>
     </div>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2936.5433620244658!2d-82.971363!3d42.607431!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8824def52dd01285%3A0xbf5243bd6a126f68!2sLakeside+Auto+Spa!5e0!3m2!1sen!2sus!4v1417642409048" width="350" height="350" frameborder="0" style="border: 1px solid #BBBBBB"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2936.542500321863!2d-82.97380838416098!3d42.60744927917116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8824def52d0dac7f%3A0xce6c274bfc8c1a53!2s42400+Hayes+Rd%2C+Clinton+Twp%2C+MI+48038!5e0!3m2!1sen!2sus!4v1533092364858" width="350" height="350" frameborder="0" style="border:1px solid #BBBBBB" allowfullscreen></iframe>
 </body>
 </html>
